fix buttons for high and regular contrast

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -49,3 +49,12 @@ img {
   color: #66ff33;
 
 }
+
+.revertbutton {
+  text-align: center;
+  margin: 24px;
+}
+
+#revertbutton{
+  display: none;
+}
